--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -29,7 +29,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero" class="text-center d-flex align-items-center">
+    <section id="hero" class="text-center text-white d-flex align-items-center">
         <div class="container">
             <h1>Welcome to My Portfolio Auto Deploy</h1>
             <p>Hi, I’m Meng Wang, a passionate student exploring tech and innovation.</p>
